--- a/src/main/webapp/resources/template/commonFooter.xhtml
+++ b/src/main/webapp/resources/template/commonFooter.xhtml
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <body>
         <ui:composition>
-            Copyright &copy; #{time.date} Edward McKnight - UP608985 (<h:outputLink target="blank" value="http://www.em-creations.co.uk">EM-Creations.co.uk</h:outputLink>)
+            Copyright &#169; #{time.date} Edward McKnight - UP608985 (<h:outputLink target="blank" value="http://www.em-creations.co.uk">EM-Creations.co.uk</h:outputLink>)
         </ui:composition>
     </body>
 </html>
