--- a/src/main/webapp/resources/template/commonLayout.xhtml
+++ b/src/main/webapp/resources/template/commonLayout.xhtml
@@ -1,8 +1,10 @@
-<?xml version='1.0' encoding='UTF-8' ?> 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -12,25 +14,37 @@
     </h:head>
 
     <h:body>
+        <b:container layout="fluid">
+            <b:row>
+                <b:column span="12">
+                    <div id="header">
+                        <ui:insert name="header">
+                            <ui:include src="./commonHeader.xhtml" />
+                        </ui:insert>
+                    </div>
+                </b:column>
+            </b:row>
 
-        <div id="header">
-            <ui:insert name="header">
-                <ui:include src="./commonHeader.xhtml" />
-            </ui:insert>
-        </div>
+            <b:row>
+                <b:column span="10" offset="1">
+                    <div id="content">
+                        <ui:insert name="content">
+                            Content
+                        </ui:insert>
+                    </div>
+                </b:column>
+            </b:row>
 
-        <div id="content" class="center_content">
-            <ui:insert name="content">
-                Content
-            </ui:insert>
-        </div>
-
-        <div id="footer">
-            <ui:insert name="footer">
-                <ui:include src="./commonFooter.xhtml" />
-            </ui:insert>
-        </div>
-
+            <b:row>
+                <b:column span="12">
+                    <div id="footer">
+                        <ui:insert name="footer">
+                            <ui:include src="./commonFooter.xhtml" />
+                        </ui:insert>
+                    </div>
+                </b:column>
+            </b:row>
+        </b:container>
     </h:body>
 
 </html>
