--- a/src/main/webapp/resources/css/cssLayout.css
+++ b/src/main/webapp/resources/css/cssLayout.css
@@ -79,20 +79,18 @@ div.contentBackground {
 /* Navigation Buttons */
 input[type=submit].navButton {
     display: block;
+    width: 100%;
+    height: 150px;
     padding: 15px;
     background-color: #b3b3b3;
     border-radius: 3px;
     box-shadow: 3px 3px 5px #888888;
     text-align: center;
     font-weight: bold;
-    font-size: 14pt;
+    font-size: 18pt;
     margin: 2% 0;
     white-space: normal;
     word-wrap: normal;
-}
-
-input[type=submit].navButton {
-    width: 100%;
 }
 
 input[type=submit].navButton:hover {
@@ -106,4 +104,8 @@ input[type=submit].actionButton {
     margin: 2% 0 0 0;
     font-size: 14pt;
     font-weight: bold;
+}
+
+input[type=submit]:disabled {
+    color: #d5d3d3;
 }
