--- a/src/main/webapp/resources/template/commonLayout.xhtml
+++ b/src/main/webapp/resources/template/commonLayout.xhtml
@@ -8,8 +8,8 @@
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <h:outputStylesheet name="css/default.css"/>
-        <h:outputStylesheet name="css/cssLayout.css"/>
+        <h:outputStylesheet name="css/default.css" position="last"/>
+        <h:outputStylesheet name="css/cssLayout.css" position="last"/>
         <title>JDiary</title>
     </h:head>
 
