--- a/src/main/webapp/resources/template/commonFooter.xhtml
+++ b/src/main/webapp/resources/template/commonFooter.xhtml
@@ -7,7 +7,16 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <body>
         <ui:composition>
-            Copyright &#169; #{time.date} Edward McKnight - UP608985 (<h:outputLink target="blank" value="http://www.em-creations.co.uk">EM-Creations.co.uk</h:outputLink>)
+            <b:row>
+                <b:column span="12">
+                    Copyright &#169; #{time.date} Edward McKnight - UP608985 (<h:outputLink target="blank" value="http://www.em-creations.co.uk">EM-Creations.co.uk</h:outputLink>)
+                </b:column>
+            </b:row>
+            <b:row>
+                <b:column styleClass="extra" span="12">
+                    Powered by Java EE
+                </b:column>
+            </b:row>
         </ui:composition>
     </body>
 </html>
