--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ffffff;
+    background-image: url("#{resource['img/sky.jpg']}");
     font-size: 11pt;
     font-family: Verdana, "Verdana CE",  Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
     color: #000000;  
