Update: Countries are now sorted alphabetically

--- a/src/main/webapp/resources/css/cssLayout.css
+++ b/src/main/webapp/resources/css/cssLayout.css
@@ -59,6 +59,11 @@
 /* Header */
 div#header {
     margin-bottom: 20px;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;  
 }
 
 /* Footer */
