--- a/src/main/webapp/resources/css/cssLayout.css
+++ b/src/main/webapp/resources/css/cssLayout.css
@@ -82,23 +82,31 @@ div.contentBackground {
 }
 
 /* Navigation Buttons */
-input[type=submit].navButton {
+input[type=submit].navButton, input[type=button].navButton, input[type=submit].navButtonSmall, input[type=button].navButtonSmall {
     display: block;
     width: 100%;
-    height: 150px;
     padding: 15px;
     background-color: #b3b3b3;
     border-radius: 3px;
     box-shadow: 3px 3px 5px #888888;
     text-align: center;
     font-weight: bold;
-    font-size: 18pt;
     margin: 2% 0;
     white-space: normal;
     word-wrap: normal;
 }
 
-input[type=submit].navButton:hover {
+input[type=submit].navButton, input[type=button].navButton {
+    height: 150px;
+    font-size: 18pt;
+}
+
+input[type=submit].navButtonSmall, input[type=button].navButtonSmall {
+    height: 100px;
+    font-size: 16pt;
+}
+
+input[type=submit].navButton:hover, input[type=button].navButton:hover, input[type=submit].navButtonSmall:hover, input[type=button].navButtonSmall:hover {
     border: 1px solid black;
     cursor: pointer;
     text-decoration: underline;
