--- a/src/main/webapp/resources/template/commonLayout.xhtml
+++ b/src/main/webapp/resources/template/commonLayout.xhtml
@@ -8,6 +8,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet name="css/default.css" position="last"/>
         <h:outputStylesheet name="css/cssLayout.css" position="last"/>
+        <link rel="shortcut icon" href="/resources/img/favicon.ico" type="image/x-icon"/>
+        <link rel="icon" href="/resources/img/favicon.ico" type="image/x-icon"/>
+        <link rel="shortcut icon" href="../resources/img/favicon.ico" type="image/x-icon"/>
+        <link rel="icon" href="../resources/img/favicon.ico" type="image/x-icon"/>
         <title>JDiary</title>
     </h:head>
     <h:body>
