--- a/src/main/webapp/resources/css/cssLayout.css
+++ b/src/main/webapp/resources/css/cssLayout.css
@@ -150,7 +150,7 @@ div#header>form>a { /* Header back links */
     font-size: 25px;
 }
 
-form#viewUserForm>div>div>input[type=text], form#newUserForm>div>div>input[type=text], form#newUserForm>div>div>input[type=password], form#newUserForm>div>div>select {
+form#viewUserForm>div>div>input[type=text], form#newUserForm>div>div>input[type=text], form#newUserForm>div>div>input[type=password], form#loginForm>div>div>input[type=text], form#loginForm>div>div>input[type=password], form#newUserForm>div>div>select {
     width: 100%;
 }
 
